{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 166,
  "lineage": "8db6d7cb-31d1-1408-f9b3-7f90e664dc2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tutorial_web_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01cdd52bb4c6c94d9",
            "association_id": "eipassoc-02efd5aa581c2d8d7",
            "domain": "vpc",
            "id": "eipalloc-01cdd52bb4c6c94d9",
            "instance": "i-049d8e38ef37390ba",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0aec3ee144b8973af",
            "private_dns": "ip-10-0-1-31.eu-central-1.compute.internal",
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-3-74-102-2.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.74.102.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.tutorial_web",
            "aws_key_pair.tutorial_kp",
            "aws_security_group.tutorial_web_sg",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3c29fcfe0602962",
            "association_id": "eipassoc-0718d6179f43dfb06",
            "domain": "vpc",
            "id": "eipalloc-0d3c29fcfe0602962",
            "instance": "i-0f3901623153e2204",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0849a61934fbbd38b",
            "private_dns": "ip-10-0-2-75.eu-central-1.compute.internal",
            "private_ip": "10.0.2.75",
            "public_dns": "ec2-52-29-52-220.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.52.220",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.tutorial_web",
            "aws_key_pair.tutorial_kp",
            "aws_security_group.tutorial_web_sg",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tutorial_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-023adaba598e661ac",
            "arn": "arn:aws:ec2:eu-central-1:778117204733:instance/i-049d8e38ef37390ba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049d8e38ef37390ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tutorial_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aec3ee144b8973af",
            "private_dns": "ip-10-0-1-31.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-3-74-102-2.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.74.102.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bb9fbe6cc0128a70",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0439f98310c09b75f",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090afaaadd90a944e"
            ]
          },
          "dependencies": [
            "aws_key_pair.tutorial_kp",
            "aws_security_group.tutorial_web_sg",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-023adaba598e661ac",
            "arn": "arn:aws:ec2:eu-central-1:778117204733:instance/i-0f3901623153e2204",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f3901623153e2204",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tutorial_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0849a61934fbbd38b",
            "private_dns": "ip-10-0-2-75.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.75",
            "public_dns": "ec2-52-29-52-220.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.29.52.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a97880352549a571",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013d368a1ec353c77",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090afaaadd90a944e"
            ]
          },
          "dependencies": [
            "aws_key_pair.tutorial_kp",
            "aws_security_group.tutorial_web_sg",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tutorial_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:778117204733:internet-gateway/igw-0121f59308c3e9683",
            "id": "igw-0121f59308c3e9683",
            "owner_id": "778117204733",
            "vpc_id": "vpc-0ca6ba93b23d2d812"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tutorial_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:778117204733:route-table/rtb-0ca821da9a089752a",
            "id": "rtb-0ca821da9a089752a",
            "owner_id": "778117204733",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ca6ba93b23d2d812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tutorial_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:778117204733:route-table/rtb-0ca44609423446d9f",
            "id": "rtb-0ca44609423446d9f",
            "owner_id": "778117204733",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0121f59308c3e9683",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ca6ba93b23d2d812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a55d6e6080464eab",
            "route_table_id": "rtb-0ca821da9a089752a",
            "subnet_id": "subnet-010e5ee62946c4553"
          },
          "dependencies": [
            "aws_route_table.tutorial_private_rt",
            "aws_subnet.tutorial_private_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093aa69ce47c3db72",
            "route_table_id": "rtb-0ca821da9a089752a",
            "subnet_id": "subnet-0edae7a00b4329b25"
          },
          "dependencies": [
            "aws_route_table.tutorial_private_rt",
            "aws_subnet.tutorial_private_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0338e99f922b20357",
            "route_table_id": "rtb-0ca44609423446d9f",
            "subnet_id": "subnet-0439f98310c09b75f"
          },
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_route_table.tutorial_public_rt",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d3146c8fe9390c1",
            "route_table_id": "rtb-0ca44609423446d9f",
            "subnet_id": "subnet-013d368a1ec353c77"
          },
          "dependencies": [
            "aws_internet_gateway.tutorial_igw",
            "aws_route_table.tutorial_public_rt",
            "aws_subnet.tutorial_public_subnet",
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tutorial_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:778117204733:security-group/sg-0848a0028232cff03",
            "description": "Security group for tutorial databases",
            "egress": [],
            "id": "sg-0848a0028232cff03",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from only the web sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090afaaadd90a944e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tutorial_db_sg",
            "name_prefix": "",
            "owner_id": "778117204733",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ca6ba93b23d2d812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.tutorial_web_sg",
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tutorial_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:778117204733:security-group/sg-090afaaadd90a944e",
            "description": "Security group for tutorial web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090afaaadd90a944e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tutorial_web_sg",
            "name_prefix": "",
            "owner_id": "778117204733",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ca6ba93b23d2d812"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tutorial_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tutorial_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:778117204733:subnet/subnet-010e5ee62946c4553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010e5ee62946c4553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778117204733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ca6ba93b23d2d812"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:778117204733:subnet/subnet-0edae7a00b4329b25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edae7a00b4329b25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778117204733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ca6ba93b23d2d812"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tutorial_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:778117204733:subnet/subnet-0439f98310c09b75f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0439f98310c09b75f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778117204733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ca6ba93b23d2d812"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:778117204733:subnet/subnet-013d368a1ec353c77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013d368a1ec353c77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "778117204733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ca6ba93b23d2d812"
          },
          "dependencies": [
            "aws_vpc.tutorial_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tutorial_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:778117204733:vpc/vpc-0ca6ba93b23d2d812",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0618673a3eddfcf68",
            "default_route_table_id": "rtb-080ccadc2a81a74fb",
            "default_security_group_id": "sg-04024cd1add1569d3",
            "dhcp_options_id": "dopt-0c236eb126b81e551",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca6ba93b23d2d812",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080ccadc2a81a74fb",
            "owner_id": "778117204733"
          }
        }
      ]
    }
  ]
}